--- a/people/person/templates/person/person_detail.html
+++ b/people/person/templates/person/person_detail.html
@@ -18,6 +18,7 @@
 <th><stong>Regigistration No</strong></th>
 <th><strong>Date of Issue</strong></th>
 <th><strong>Token No</strong></th>
+<th><strong>pdf</strong></th>
 </tr>
 {% for jhar in person.jharsewa_set.all %}
 <tr>
@@ -25,6 +26,7 @@
 <td>  {{jhar.cert_no}}</td>
 <td>{{jhar.date_of_issue}}</td>
 <td>{{jhar.token_no}}</td>
+<td><iframe src="{{jhar.document.url}}" style="width: 100%;height: 100%;border: none;"></iframe></td>
 </tr>
 {%endfor%}
 </table>
@@ -58,6 +60,7 @@
 <th><strong>Roll No</strong></th>
 <th><strong>CGPA/%</strong></th>
 <th><strong>Scored</strong></th>
+<th><strong>PassCert</strong></th>
 </tr>
 {% for edu in person.education_set.all %}
 <tr>
@@ -67,6 +70,7 @@
 <td>{{edu.roll_no}}</td>
 <td>{{edu.cgpa_perc}}</td>
 <td>{{edu.scored}}</td>
+<td><iframe src="{{edu.passing.url}}" style="width: 100%;height: 100%;border: none;"></iframe></td>
 </tr>
 {%endfor%}
 </table>
