--- a/people/person/templates/person/person_detail.html
+++ b/people/person/templates/person/person_detail.html
@@ -34,6 +34,8 @@
 </table>
 {% endif %}
 
+
+{% if person.identy_set.all %}
 <h3>Issued Id</h3>
 <table>
 <tr>
@@ -42,13 +44,17 @@
 <th><strong>Remark</strong></th>
 <th><strong>pdf</strong></th>
 </tr>
+{% for id in person.identy_set.all %}
 <tr>
-<td>{{person.identy.id_type}}</td>
-<td>  {{person.identy.cert_no}}</td>
-<td>{{person.identy.remark}}</td>
-<td><iframe src="{{person.identy.idcard.url}}" style="width: 100%;height: 100%;border: none"></iframe></td>
+<td>{{id.id_type}}</td>
+<td>  {{id.cert_no}}</td>
+<td>{{id.remark}}</td>
+<td><iframe src="{{id.idcard.url}}" style="width: 100%;height: 100%;border: none"></iframe></td>
 </tr>
+{%endfor%}
 </table>
+{% endif %}
+
 
 {% if person.education_set.all %}
 <h3>Education</h3>
