--- a/people/person/templates/base_generic.html
+++ b/people/person/templates/base_generic.html
@@ -24,12 +24,11 @@ th:nth-child(even),td:nth-child(even) {
 </head>
 <body>
 <div class="container-sm border py-3 my-3">
-<div class="container border py-3 my-3"><h3><a href="{% url "person" %}"class="btn">All Members</a><h3>
-
+<div class="container border py-3 my-3"><h3><a href="{% url "persons" %}"class="btn">All Members</a><h3>
+<a href="{% url 'index' %}"class="btn btn-info">Home</a>
 <div>
 {% if user.is_authenticated %}
      User: {{ user.get_username }}
-    
 <a href="{% url 'profile' %}"class="btn btn-info">Profile</a>
      <a href="{% url 'logout'%}?next={{request.path}}"class="btn btn-danger">Logout</a>
    {% else %}
