--- a/people/person/templates/person/register.html
+++ b/people/person/templates/person/register.html
@@ -1,7 +1,7 @@
 {% extends 'base_generic.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<h2>Register</h2>
+<h2>Register Yourself</h2>
 
 <form method="post">
     {% csrf_token %}
