--- a/people/person/templates/person/detail.html
+++ b/people/person/templates/person/detail.html
@@ -3,7 +3,7 @@
  <a href="{% url 'jharsewa' %}"class="btn btn-secondary">jharupdate</a>
 <a href="{% url 'education' %}"class="btn btn-secondary">EduUpdate</a>
 <a href="{% url 'identy' %}"class="btn btn-secondary">IdentyUpdate</a>
-<img src="{{ person.image.url }}"style="float:right;width:62px;height:62px;" class="card-img-top img-fluid" alt="{{ person.name }}">
+<img src="{{ person.image.url }}"style="float:right;width:80px;height:100px;" class="card-img-top img-fluid" alt="{{ person.name }}">
 <h1><strong>{{person.name}}</strong></h1>
 <p><strong>Phone :</strong><a href ="tel:"{{person.phone}}"">{{person.phone}}</a></p>
 <p><strong>DOB :</strong>{{person.dob}}</p>
@@ -30,7 +30,7 @@
 <td>  {{jhar.cert_no}}</td>
 <td>{{jhar.date_of_issue}}</td>
 <td>{{jhar.token_no}}</td>
-<td><iframe src="{{jhar.document.url}}" style="width: 100%;height: 100%;border: none;"></iframe></td>
+<td><object data="{{jhar.document.url}}" style="width: 100%;height: 100%;border: none;" type:"application/pdf"></object></td>
 <td><a href="{% url "jharupdate" jhar.id %}"class="btn btn-warning">update</a></td>
 <td><a href="{% url "jhar_del" jhar.id %}"class="btn btn-danger">Delete</a></td>
 </tr>
