--- a/people/person/templates/person/detail.html
+++ b/people/person/templates/person/detail.html
@@ -1,17 +1,19 @@
-
+   
 {% extends "base_generic.html" %}
 {% block content %}
+
+<div class="row">
+
+  <div id="corner1"class="column">
+
 <div class="dropdown">
-  <button class="dropbtn">Update</button>
+  <button class="dropbtn"><i class="material-icons" style="font-size:48px;color:red">cloud_upload</i></button>
   <div class="dropdown-content">
 <a href="{% url 'jharsewa' %}"class="btn btn-secondary">jharupdate</a>
 <a href="{% url 'education' %}"class="btn btn-warning">EduUpdate</a>
 <a href="{% url 'identy' %}"class="btn btn-secondary">IdentyUpdate</a>
 </div>
 </div>
-<div class="row">
-
-  <div id="corner1"class="column">
 
 <img src="{{ person.image.url }}"style="float:right;width:80px;height:100px;" class="card-img-top img-fluid" alt="{{ person.name }}">
 <h1><strong>{{person.name}}</strong></h1>
@@ -25,7 +27,7 @@
 
 {% if person.jharsewa_set.all %}
 <div id ="corner2"class="column">
-<h3 class="head">Jharsewa Certificate</h3>
+<h3 class="head"><i class="fa fa-certificate" style="font-size:48px;color:red"></i>jharsewa</h3>
 <div style="overflow-x: auto;">
 <table>
 <tr>
@@ -33,7 +35,7 @@
 <th><stong>Regigistration No</strong></th>
 <th><strong>Date of Issue</strong></th>
 <th><strong>Token No</strong></th>
-<th><strong>pdf</strong></th>
+<th><strong><i class="material-icons">cloud_download</i></button></strong></th>
 <th><strong>Update</strong></th>
 <th><strong>Delete</strong></th>
 </tr>
@@ -43,9 +45,9 @@
 <td>  {{jhar.cert_no}}</td>
 <td>{{jhar.date_of_issue}}</td>
 <td>{{jhar.token_no}}</td>
-<td><iframe src="{{jhar.document.url}}"></iframe></td>
-<td><a href="{% url "jharupdate" jhar.id %}"class="btn btn-warning">update</a></td>
-<td><a href="{% url "jhar_del" jhar.id %}"class="btn btn-danger">Delete</a></td>
+<td><a href="{{jhar.document.url}}"><button class="btn"><i class="fas fa-file-download"style="font-size:48px"></i>Download</button></a></td>
+<td><a href="{% url "jharupdate" jhar.id %}"><button class="btn"><i class="fa fa-refresh" style="font-size:48px;color:MediumSeaGreen"></i>Update</button></a></td>
+<td><a href="{% url "jhar_del" jhar.id %}"><i class="material-icons" style="font-size:48px;color:red">delete</i></a></td>
 </tr>
 {%endfor%}
 </table>
@@ -56,7 +58,7 @@
 {% if person.identy_set.all %}
 
 <div id="corner3" class="column">
-<h3 class="head">Issued Id</h3>
+<h3 class="head"><i class="fa fa-id-card-o" style="font-size:48px;color:red;"></i>Ids</h3>
 <div style="overflow-x: auto;">
 <table>
 <tr>
@@ -72,14 +74,10 @@
 <td>{{id.id_type}}</td>
 <td>  {{id.cert_no}}</td>
 <td>{{id.remark}}</td>
-<td>{% if id.idcard %}<object data="{{id.idcard.url}}" type="application/pdf" width="750px" height="750px">
-    <embed src="{{id.idcard.url}}" type="application/pdf">
-        <p>This browser does not support PDFs. Please download the PDF to view it: <a href="{{id.idcard.url}}">Download PDF</a>.</p>
-    </embed>
-</object>
+<td>{% if id.idcard %}<a href="{{id.idcard.url}}"><button class="btn"><i class="fas fa-file-download"style="font-size:48px"></i>Download</button></a>
 {% endif %}</td>
-<td><a href="{% url "id_del" id.id %}"class="btn btn-danger">DELETE</a></td>
-<td><a href="{% url "idupdate" id.id %}"class="btn btn-warning">update</a></td>
+<td><a href="{% url "id_del" id.id %}"class="btn"><i class="fa fa-remove" style="font-size:48px;color:red"></i>Delete</a></td>
+<td><a href="{% url "idupdate" id.id %}"><i class="fa fa-edit" style="font-size:48px;color:red"></i>Edit</a></td>
 </tr>
 {%endfor%}
 </table>
@@ -90,7 +88,7 @@
 
 {% if person.education_set.all %}
 <div id="corner4" class="column">
-<h3 class="head">Education</h3>
+<h3 class="head"><i class='fas fa-book-reader' style='font-size:48px;color:red'></i>Education</h3>
 <div style="overflow-x: auto;">
 <table>
 <tr>
@@ -114,11 +112,41 @@
 <td>{{edu.roll_no}}</td>
 <td>{{edu.cgpa_perc}}</td>
 <td>{{edu.scored}}</td>
-<td><iframe src="{{edu.passing.url}}""></iframe></td>
-<td><iframe src="{{edu.marksheet.url}}""></iframe></td>
-<td><iframe src="{{edu.admit.url}}"></iframe></td>
-<td><a href="{% url "edu_del" edu.id %}"class="btn btn-danger">DELETE</a></td>
-<td><a href="{% url "eduupdate" edu.id %}"class="btn btn-warning">Update</a></td>
+<td><a href="{{edu.passing.url}}""><button class="btn"><i class="fas fa-file-download"style="font-size:48px"></i>Download</button></a></td>
+<td><a href="{{edu.marksheet.url}}""><button class="btn"><i class="fas fa-file-download"style="font-size:48px"></i>Download</button></a></td>
+<td><a href="{{edu.admit.url}}"></a><button class="btn"><i class="fas fa-file-download"style="font-size:48px"></i>Download</button></td>
+<td><a href="{% url "edu_del" edu.id %}"><i class="material-icons" style="font-size:48px;color:red">delete</i></a></td>
+<td><a href="{% url "eduupdate" edu.id %}"><i class="fa fa-edit" style="font-size:48px;color:red"></i>Edit</a></td>
+</tr>
+{%endfor%}
+</table>
+</div>
+</div>
+{% endif %}
+
+{% if person.special_set.all %}
+<div id="corner4" class="column">
+<h3 class="head"><i class='fas fa-award' style='font-size:48px;color:red'></i>Specialization</h3>
+<div style="overflow-x: auto;">
+<table>
+<tr>
+<th><strong>YOP</strong></th>
+<th><stong>Passed</strong></th>
+<th><strong>Remark</strong></th>
+<th><strong>CGPA/%</strong></th>
+<th><strong>Scored</strong></th>
+<th><strong>MarkPdf</strong></th>
+<th><strong>AdmitPdf</strong></th>
+</tr>
+{% for edu in person.special_set.all %}
+<tr>
+<td>{{edu.year_of_pass}}</td>
+<td>  {{edu.exam_passed}}</td>
+<td>{{edu.specialisation}}</td>
+<td>{{edu.cgpa_perc}}</td>
+<td>{{edu.scored}}</td>
+<td><a href="{{edu.marksheet.url}}"><button class="btn"><i class="fa fa-file-pdf-o"0 style="font-size:48px;color:red"></i>Download</button></a></td>
+<td><a href="{{edu.admit.url}}"><button class="btn"><i class="fa fa-download"></i> Download</button></a></td>
 </tr>
 {%endfor%}
 </table>
@@ -126,5 +154,7 @@
 </div>
 </div>
 {% endif %}
+
+
 
 {% endblock %}
