--- a/people/person/templates/base_generic.html
+++ b/people/person/templates/base_generic.html
@@ -29,10 +29,10 @@
 <button onclick="window.print()"><i class="fa fa-print" style="font-size:48px;color:red"></i></button>
 -->
 <div class="topnav">
-  <a href="#home" class="active">Logo</a>
+  <a href="#home" class="active">Home</a>
   <div id="myLinks">
 <a href="{% url "persons" %}">All</a>
-<a href="{% url 'index' %}">conter</a>
+<a href="{% url 'index' %}">counter</a>
  </div>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
