--- a/people/person/templates/person/detail.html
+++ b/people/person/templates/person/detail.html
@@ -66,7 +66,7 @@
 {% if person.identy_set.all %}
 <div id="Paris" class="tabcontent">
 <div id="corner3" class="column">
-<h3 class="head"><i class="fa-solid fa-id-card" style="font-size:32px;color:red;"></i>Identy cards</h3>
+<h3 class="head"><i class="fa-solid fa-id-card" style="font-size:32px;color:red;">Identy cards</i></h3>
 <div style="overflow-x: auto;">
 <table>
 <tr>
