--- a/people/person/templates/person/person_detail.html
+++ b/people/person/templates/person/person_detail.html
@@ -1,99 +1,145 @@
 {% extends "base_generic.html" %}
 {% block content %}
-<a href="{% url "person-detail" person.id %}"class="btn btn-primary">Home</a>
- <a href="{% url 'jharsewa' %}"class="btn btn-secondary">jharupdate</a>
-<a href="{% url 'education' %}"class="btn btn-secondary">EduUpdate</a>
-<a href="{% url 'identy' %}"class="btn btn-secondary">IdentyUpdate</a>
-<img src="{{ person.image.url }}"style="float:right;width:62px;height:62px;" class="card-img-top img-fluid" alt="{{ person.name }}">
-<h1><strong>{{person.name}}</strong></h1>
-<p><strong>Phone :</strong><a href ="tel:"{{person.phone}}"">{{person.phone}}</a></p>
-<p><strong>DOB :</strong>{{person.dob}}</p>
-<p><strong> Mother :</strong>{{person.mother}}</p>
-<p><strong> Father :</strong>{{person.father}}</p>
-<p><strong> Vaccine :</strong>{{person.vaccine}}</p>
+<a href="{% url 'person-detail' person.id %}" class="btn btn-primary">Home</a>
+<a href="{% url 'jharsewa' %}" class="btn btn-secondary">jharupdate</a>
+<a href="{% url 'education' %}" class="btn btn-secondary">EduUpdate</a>
+<a href="{% url 'identy' %}" class="btn btn-secondary">IdentyUpdate</a>
 
+{% if person.image %}
+  <img src="{{ person.image.url }}" style="float:right; width:62px; height:62px;" class="card-img-top img-fluid" alt="{{ person.name }}">
+{% endif %}
+
+<h1><strong>{{ person.name }}</strong></h1>
+<p><strong>Phone :</strong>
+  {% if person.phone %}
+    <a href="tel:{{ person.phone }}">{{ person.phone }}</a>
+  {% else %}
+    N/A
+  {% endif %}
+</p>
+<p><strong>DOB :</strong> {{ person.dob }}</p>
+<p><strong>Mother :</strong> {{ person.mother }}</p>
+<p><strong>Father :</strong> {{ person.father }}</p>
+<p><strong>Vaccine :</strong> {{ person.vaccine }}</p>
 
 {% if person.jharsewa_set.all %}
-<h3>Jharsewa Certificate</h3>
-<table>
-<tr>
-<th><strong>Type</strong></th>
-<th><stong>Regigistration No</strong></th>
-<th><strong>Date of Issue</strong></th>
-<th><strong>Token No</strong></th>
-<th><strong>pdf</strong></th>
-</tr>
-{% for jhar in person.jharsewa_set.all %}
-<tr>
-<td>{{jhar.type}}</td>
-<td>  {{jhar.cert_no}}</td>
-<td>{{jhar.date_of_issue}}</td>
-<td>{{jhar.token_no}}</td>
-<td><iframe src="{{jhar.document.url}}" style="width: 100%;height: 100%;border: none;"></iframe></td>
-</tr>
-{%endfor%}
-</table>
+  <h3>Jharsewa Certificate</h3>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th><strong>Type</strong></th>
+        <th><strong>Registration No</strong></th>
+        <th><strong>Date of Issue</strong></th>
+        <th><strong>Token No</strong></th>
+        <th><strong>Document</strong></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for jhar in person.jharsewa_set.all %}
+      <tr>
+        <td>{{ jhar.type }}</td>
+        <td>{{ jhar.cert_no }}</td>
+        <td>{{ jhar.date_of_issue }}</td>
+        <td>{{ jhar.token_no }}</td>
+        <td>
+          {% if jhar.document %}
+            <a href="{{ jhar.document.url }}" target="_blank" class="btn btn-sm btn-outline-primary">Open</a>
+            <a href="{{ jhar.document.url }}" download class="btn btn-sm btn-outline-secondary">Download</a>
+          {% else %}
+            N/A
+          {% endif %}
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 {% endif %}
-
 
 {% if person.identy_set.all %}
-<h3>Issued Id</h3>
-<table>
-<tr>
-<th><strong>Type</strong></th>
-<th><stong>Id No</strong></th>
-<th><strong>Remark</strong></th>
-<th><strong>pdf</strong></th>
-<th><strong>DELETE</strong></th>
-<th><strong>update</strong></th>
-</tr>
-{% for id in person.identy_set.all %}
-<tr>
-<td>{{id.id_type}}</td>
-<td>  {{id.cert_no}}</td>
-<td>{{id.remark}}</td>
-<td>{% if id.idcard %}<object data="{{id.idcard.url}}" type="application/pdf" width="750px" height="750px">
-    <embed src="{{id.idcard.url}}" type="application/pdf">
-        <p>This browser does not support PDFs. Please download the PDF to view it: <a href="{{id.idcard.url}}">Download PDF</a>.</p>
-    </embed>
-</object>
-{% endif %}</td>
-<td><a href="{% url "id_del" id.id %}">DELETE</a></td>
-<td><a href="{% url "idupdate" id.id %}">update</a></td>
-</tr>
-{%endfor%}
-</table>
+  <h3>Issued Id</h3>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th><strong>Type</strong></th>
+        <th><strong>Id No</strong></th>
+        <th><strong>Remark</strong></th>
+        <th><strong>Document</strong></th>
+        <th><strong>Delete</strong></th>
+        <th><strong>Update</strong></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for ident in person.identy_set.all %}
+      <tr>
+        <td>{{ ident.id_type }}</td>
+        <td>{{ ident.cert_no }}</td>
+        <td>{{ ident.remark }}</td>
+        <td>
+          {% if ident.idcard %}
+            <a href="{{ ident.idcard.url }}" target="_blank" class="btn btn-sm btn-outline-primary">Open PDF</a>
+            <a href="{{ ident.idcard.url }}" download class="btn btn-sm btn-outline-secondary">Download</a>
+          {% else %}
+            N/A
+          {% endif %}
+        </td>
+        <td><a href="{% url 'id_del' ident.id %}" class="text-danger">DELETE</a></td>
+        <td><a href="{% url 'idupdate' ident.id %}">Update</a></td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 {% endif %}
 
-
 {% if person.education_set.all %}
-<h3>Education</h3>
-<table>
-<tr>
-<th><strong>YOP</strong></th>
-<th><stong>Passed</strong></th>
-<th><strong>Board</strong></th>
-<th><strong>Roll No</strong></th>
-<th><strong>CGPA/%</strong></th>
-<th><strong>Scored</strong></th>
-<th><strong>PassDoc</strong></th>
-<th><strong>MarkPdf</strong></th>
-<th><strong>AdmitPdf</strong></th>
-</tr>
-{% for edu in person.education_set.all %}
-<tr>
-<td>{{edu.year_of_pass}}</td>
-<td>  {{edu.exam_passed}}</td>
-<td>{{edu.board}}</td>
-<td>{{edu.roll_no}}</td>
-<td>{{edu.cgpa_perc}}</td>
-<td>{{edu.scored}}</td>
-<td><iframe src="{{edu.passing.url}}" style="width: 100%;height: 100%;border: none;"></iframe></td>
-<td><iframe src="{{edu.marksheet.url}}" style="width: 100%;height: 100%;border: none;"></iframe></td>
-<td><iframe src="{{edu.admit.url}}" style="width: 100%;height: 100%;border: none;"></iframe></td>
-</tr>
-{%endfor%}
-</table>
+  <h3>Education</h3>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th><strong>YOP</strong></th>
+        <th><strong>Passed</strong></th>
+        <th><strong>Board</strong></th>
+        <th><strong>Roll No</strong></th>
+        <th><strong>CGPA/%</strong></th>
+        <th><strong>Scored</strong></th>
+        <th><strong>PassDoc</strong></th>
+        <th><strong>MarkPdf</strong></th>
+        <th><strong>AdmitPdf</strong></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for edu in person.education_set.all %}
+      <tr>
+        <td>{{ edu.year_of_pass }}</td>
+        <td>{{ edu.exam_passed }}</td>
+        <td>{{ edu.board }}</td>
+        <td>{{ edu.roll_no }}</td>
+        <td>{{ edu.cgpa_perc }}</td>
+        <td>{{ edu.scored }}</td>
+        <td>
+          {% if edu.passing %}
+            <a href="{{ edu.passing.url }}" target="_blank" class="btn btn-sm btn-outline-primary">Open</a>
+          {% else %}
+            N/A
+          {% endif %}
+        </td>
+        <td>
+          {% if edu.marksheet %}
+            <a href="{{ edu.marksheet.url }}" target="_blank" class="btn btn-sm btn-outline-primary">Open</a>
+          {% else %}
+            N/A
+          {% endif %}
+        </td>
+        <td>
+          {% if edu.admit %}
+            <a href="{{ edu.admit.url }}" target="_blank" class="btn btn-sm btn-outline-primary">Open</a>
+          {% else %}
+            N/A
+          {% endif %}
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 {% endif %}
 
 {% endblock %}
